# job-research-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py  embedding.py  llm.py  think_log.py
src/agents/: critic.py  planner.py  researcher.py  writer.py
src/api/: main.py
src/conversation/: __init__.py  context.py  detector.py  generator.py  router.py
src/graph/: state.py  workflow.py
src/graph/nodes/: __init__.py
src/search/: __init__.py  crawler.py  models.py
src/search/engines/: __init__.py  boss.py  liepin.py
src/storage/: __init__.py  models.py  qdrant_client.py  repository.py
src/ui/: app.py
tests/: test_agents.py  test_config.py  test_conversation.py  test_embedding.py  test_search.py  test_storage.py
